--- a/src/main/assembly/conf/application.yml
+++ b/src/main/assembly/conf/application.yml
@@ -6,9 +6,9 @@ spring:
     name: mydream
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: zxcvbnm,.
+    password: mybb520
     username: root
-    url: jdbc:mysql://localhost:3306/mydream?autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/mydream?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 
 robot:
   ding:
