--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     password: zxcvbnm,.
     username: root
     url: jdbc:mysql://localhost:3306/mydream?autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+logging:
+  level:
+    com.lin.mydream.mapper: debug
+
 
 robot:
   ding:
