--- a/src/main/assembly/conf/application.yml
+++ b/src/main/assembly/conf/application.yml
@@ -12,7 +12,7 @@ spring:
 
 logging:
   level:
-    com.lin.mydream.mapper: debug
+    com.lin.mydream.mapper: warn
 
 robot:
   ding:
@@ -26,3 +26,5 @@ chat-gpt:
   api-key-alias: OPENAI_API_KEY_1
   max-tokens: 1000
   temperature: 0.5
+  enable-stream-response: true
+  segment-length: 128
